--- a/CBoatingMenuBar/Base.lproj/MainMenu.xib
+++ b/CBoatingMenuBar/Base.lproj/MainMenu.xib
@@ -12,7 +12,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="CBoatingMenuBar" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="CBI_Flag" customModuleProvider="target">
             <connections>
                 <outlet property="statusMenu" destination="O8q-1P-SU8" id="Obq-K5-C3l"/>
             </connections>
